// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text when "size" is large and "color" has value renders correctly 1`] = `
.c0.rovna-ui-typography-text {
  line-height: 20px;
  font-weight: 400;
  color: red;
}

<span
  className="rovna-ui-typography c0 rovna-ui-typography-text css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-text"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, sequi?
</span>
`;

exports[`Text when "size" is large and "fontWeight" is 100 renders correctly 1`] = `
.c0.rovna-ui-typography-text {
  line-height: 20px;
  font-weight: 100;
}

<span
  className="rovna-ui-typography c0 rovna-ui-typography-text css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-text"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, sequi?
</span>
`;

exports[`Text when "size" is large and "fontWeight" is 200 renders correctly 1`] = `
.c0.rovna-ui-typography-text {
  line-height: 20px;
  font-weight: 200;
}

<span
  className="rovna-ui-typography c0 rovna-ui-typography-text css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-text"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, sequi?
</span>
`;

exports[`Text when "size" is large and "fontWeight" is 300 renders correctly 1`] = `
.c0.rovna-ui-typography-text {
  line-height: 20px;
  font-weight: 300;
}

<span
  className="rovna-ui-typography c0 rovna-ui-typography-text css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-text"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, sequi?
</span>
`;

exports[`Text when "size" is large and "fontWeight" is 400 renders correctly 1`] = `
.c0.rovna-ui-typography-text {
  line-height: 20px;
  font-weight: 400;
}

<span
  className="rovna-ui-typography c0 rovna-ui-typography-text css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-text"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, sequi?
</span>
`;

exports[`Text when "size" is large and "fontWeight" is 500 renders correctly 1`] = `
.c0.rovna-ui-typography-text {
  line-height: 20px;
  font-weight: 500;
}

<span
  className="rovna-ui-typography c0 rovna-ui-typography-text css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-text"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, sequi?
</span>
`;

exports[`Text when "size" is large and "fontWeight" is 600 renders correctly 1`] = `
.c0.rovna-ui-typography-text {
  line-height: 20px;
  font-weight: 600;
}

<span
  className="rovna-ui-typography c0 rovna-ui-typography-text css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-text"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, sequi?
</span>
`;

exports[`Text when "size" is large and "textAlign" is left renders correctly 1`] = `
.c0.rovna-ui-typography-text {
  line-height: 20px;
  font-weight: 400;
  display: inline-block;
  text-align: left;
}

<span
  className="rovna-ui-typography c0 rovna-ui-typography-text css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-text"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, sequi?
</span>
`;

exports[`Text when "size" is large and "textAlign" is right renders correctly 1`] = `
.c0.rovna-ui-typography-text {
  line-height: 20px;
  font-weight: 400;
  display: inline-block;
  text-align: right;
}

<span
  className="rovna-ui-typography c0 rovna-ui-typography-text css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-text"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, sequi?
</span>
`;

exports[`Text when "size" is large renders correctly 1`] = `
.c0.rovna-ui-typography-text {
  font-size: 16px;
  line-height: 24px;
  font-weight: 400;
}

<span
  className="rovna-ui-typography c0 rovna-ui-typography-text css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-text"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, sequi?
</span>
`;

exports[`Text when "size" is large uppercase renders correctly 1`] = `
.c0.rovna-ui-typography-text {
  line-height: 20px;
  font-weight: 400;
  text-transform: uppercase;
  -webkit-letter-spacing: 1px;
  -moz-letter-spacing: 1px;
  -ms-letter-spacing: 1px;
  letter-spacing: 1px;
}

<span
  className="rovna-ui-typography c0 rovna-ui-typography-text css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-text"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, sequi?
</span>
`;

exports[`Text when "size" is large with custom margin renders correctly 1`] = `
.c0.rovna-ui-typography-text {
  font-size: 16px;
  line-height: 24px;
  font-weight: 400;
  margin: 12px;
  display: inline-block;
}

<span
  className="rovna-ui-typography c0 rovna-ui-typography-text css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-text"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, sequi?
</span>
`;

exports[`Text when "size" is large with custom margin renders correctly 2`] = `
.c0.rovna-ui-typography-text {
  font-size: 16px;
  line-height: 24px;
  font-weight: 400;
  margin: 12px;
  display: inline-block;
}

<span
  className="rovna-ui-typography c0 rovna-ui-typography-text css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-text"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, sequi?
</span>
`;

exports[`Text when "size" is large with custom margin renders correctly 3`] = `
.c0.rovna-ui-typography-text {
  font-size: 16px;
  line-height: 24px;
  font-weight: 400;
  margin-top: 16px;
  display: inline-block;
}

<span
  className="rovna-ui-typography c0 rovna-ui-typography-text css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-text"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, sequi?
</span>
`;

exports[`Text when "size" is large with custom margin renders correctly 4`] = `
.c0.rovna-ui-typography-text {
  font-size: 16px;
  line-height: 24px;
  font-weight: 400;
  margin-top: 16px;
  display: inline-block;
}

<span
  className="rovna-ui-typography c0 rovna-ui-typography-text css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-text"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, sequi?
</span>
`;

exports[`Text when "size" is large with custom margin renders correctly 5`] = `
.c0.rovna-ui-typography-text {
  font-size: 16px;
  line-height: 24px;
  font-weight: 400;
  margin-right: 16px;
  display: inline-block;
}

<span
  className="rovna-ui-typography c0 rovna-ui-typography-text css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-text"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, sequi?
</span>
`;

exports[`Text when "size" is large with custom margin renders correctly 6`] = `
.c0.rovna-ui-typography-text {
  font-size: 16px;
  line-height: 24px;
  font-weight: 400;
  margin-right: 16px;
  display: inline-block;
}

<span
  className="rovna-ui-typography c0 rovna-ui-typography-text css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-text"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, sequi?
</span>
`;

exports[`Text when "size" is large with custom margin renders correctly 7`] = `
.c0.rovna-ui-typography-text {
  font-size: 16px;
  line-height: 24px;
  font-weight: 400;
  margin-bottom: 16px;
  display: inline-block;
}

<span
  className="rovna-ui-typography c0 rovna-ui-typography-text css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-text"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, sequi?
</span>
`;

exports[`Text when "size" is large with custom margin renders correctly 8`] = `
.c0.rovna-ui-typography-text {
  font-size: 16px;
  line-height: 24px;
  font-weight: 400;
  margin-bottom: 16px;
  display: inline-block;
}

<span
  className="rovna-ui-typography c0 rovna-ui-typography-text css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-text"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, sequi?
</span>
`;

exports[`Text when "size" is large with custom margin renders correctly 9`] = `
.c0.rovna-ui-typography-text {
  font-size: 16px;
  line-height: 24px;
  font-weight: 400;
  margin-left: 16px;
  display: inline-block;
}

<span
  className="rovna-ui-typography c0 rovna-ui-typography-text css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-text"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, sequi?
</span>
`;

exports[`Text when "size" is large with custom margin renders correctly 10`] = `
.c0.rovna-ui-typography-text {
  font-size: 16px;
  line-height: 24px;
  font-weight: 400;
  margin-left: 16px;
  display: inline-block;
}

<span
  className="rovna-ui-typography c0 rovna-ui-typography-text css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-text"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, sequi?
</span>
`;

exports[`Text when "size" is medium and "color" has value renders correctly 1`] = `
.c0.rovna-ui-typography-text {
  line-height: 20px;
  font-weight: 400;
  color: red;
}

<span
  className="rovna-ui-typography c0 rovna-ui-typography-text css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-text"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, sequi?
</span>
`;

exports[`Text when "size" is medium and "fontWeight" is 100 renders correctly 1`] = `
.c0.rovna-ui-typography-text {
  line-height: 20px;
  font-weight: 100;
}

<span
  className="rovna-ui-typography c0 rovna-ui-typography-text css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-text"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, sequi?
</span>
`;

exports[`Text when "size" is medium and "fontWeight" is 200 renders correctly 1`] = `
.c0.rovna-ui-typography-text {
  line-height: 20px;
  font-weight: 200;
}

<span
  className="rovna-ui-typography c0 rovna-ui-typography-text css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-text"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, sequi?
</span>
`;

exports[`Text when "size" is medium and "fontWeight" is 300 renders correctly 1`] = `
.c0.rovna-ui-typography-text {
  line-height: 20px;
  font-weight: 300;
}

<span
  className="rovna-ui-typography c0 rovna-ui-typography-text css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-text"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, sequi?
</span>
`;

exports[`Text when "size" is medium and "fontWeight" is 400 renders correctly 1`] = `
.c0.rovna-ui-typography-text {
  line-height: 20px;
  font-weight: 400;
}

<span
  className="rovna-ui-typography c0 rovna-ui-typography-text css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-text"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, sequi?
</span>
`;

exports[`Text when "size" is medium and "fontWeight" is 500 renders correctly 1`] = `
.c0.rovna-ui-typography-text {
  line-height: 20px;
  font-weight: 500;
}

<span
  className="rovna-ui-typography c0 rovna-ui-typography-text css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-text"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, sequi?
</span>
`;

exports[`Text when "size" is medium and "fontWeight" is 600 renders correctly 1`] = `
.c0.rovna-ui-typography-text {
  line-height: 20px;
  font-weight: 600;
}

<span
  className="rovna-ui-typography c0 rovna-ui-typography-text css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-text"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, sequi?
</span>
`;

exports[`Text when "size" is medium and "textAlign" is left renders correctly 1`] = `
.c0.rovna-ui-typography-text {
  line-height: 20px;
  font-weight: 400;
  display: inline-block;
  text-align: left;
}

<span
  className="rovna-ui-typography c0 rovna-ui-typography-text css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-text"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, sequi?
</span>
`;

exports[`Text when "size" is medium and "textAlign" is right renders correctly 1`] = `
.c0.rovna-ui-typography-text {
  line-height: 20px;
  font-weight: 400;
  display: inline-block;
  text-align: right;
}

<span
  className="rovna-ui-typography c0 rovna-ui-typography-text css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-text"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, sequi?
</span>
`;

exports[`Text when "size" is medium renders correctly 1`] = `
.c0.rovna-ui-typography-text {
  line-height: 20px;
  font-weight: 400;
}

<span
  className="rovna-ui-typography c0 rovna-ui-typography-text css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-text"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, sequi?
</span>
`;

exports[`Text when "size" is medium uppercase renders correctly 1`] = `
.c0.rovna-ui-typography-text {
  line-height: 20px;
  font-weight: 400;
  text-transform: uppercase;
  -webkit-letter-spacing: 1px;
  -moz-letter-spacing: 1px;
  -ms-letter-spacing: 1px;
  letter-spacing: 1px;
}

<span
  className="rovna-ui-typography c0 rovna-ui-typography-text css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-text"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, sequi?
</span>
`;

exports[`Text when "size" is medium with custom margin renders correctly 1`] = `
.c0.rovna-ui-typography-text {
  line-height: 20px;
  font-weight: 400;
  margin: 12px;
  display: inline-block;
}

<span
  className="rovna-ui-typography c0 rovna-ui-typography-text css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-text"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, sequi?
</span>
`;

exports[`Text when "size" is medium with custom margin renders correctly 2`] = `
.c0.rovna-ui-typography-text {
  line-height: 20px;
  font-weight: 400;
  margin: 12px;
  display: inline-block;
}

<span
  className="rovna-ui-typography c0 rovna-ui-typography-text css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-text"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, sequi?
</span>
`;

exports[`Text when "size" is medium with custom margin renders correctly 3`] = `
.c0.rovna-ui-typography-text {
  line-height: 20px;
  font-weight: 400;
  margin-top: 16px;
  display: inline-block;
}

<span
  className="rovna-ui-typography c0 rovna-ui-typography-text css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-text"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, sequi?
</span>
`;

exports[`Text when "size" is medium with custom margin renders correctly 4`] = `
.c0.rovna-ui-typography-text {
  line-height: 20px;
  font-weight: 400;
  margin-top: 16px;
  display: inline-block;
}

<span
  className="rovna-ui-typography c0 rovna-ui-typography-text css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-text"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, sequi?
</span>
`;

exports[`Text when "size" is medium with custom margin renders correctly 5`] = `
.c0.rovna-ui-typography-text {
  line-height: 20px;
  font-weight: 400;
  margin-right: 16px;
  display: inline-block;
}

<span
  className="rovna-ui-typography c0 rovna-ui-typography-text css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-text"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, sequi?
</span>
`;

exports[`Text when "size" is medium with custom margin renders correctly 6`] = `
.c0.rovna-ui-typography-text {
  line-height: 20px;
  font-weight: 400;
  margin-right: 16px;
  display: inline-block;
}

<span
  className="rovna-ui-typography c0 rovna-ui-typography-text css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-text"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, sequi?
</span>
`;

exports[`Text when "size" is medium with custom margin renders correctly 7`] = `
.c0.rovna-ui-typography-text {
  line-height: 20px;
  font-weight: 400;
  margin-bottom: 16px;
  display: inline-block;
}

<span
  className="rovna-ui-typography c0 rovna-ui-typography-text css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-text"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, sequi?
</span>
`;

exports[`Text when "size" is medium with custom margin renders correctly 8`] = `
.c0.rovna-ui-typography-text {
  line-height: 20px;
  font-weight: 400;
  margin-bottom: 16px;
  display: inline-block;
}

<span
  className="rovna-ui-typography c0 rovna-ui-typography-text css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-text"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, sequi?
</span>
`;

exports[`Text when "size" is medium with custom margin renders correctly 9`] = `
.c0.rovna-ui-typography-text {
  line-height: 20px;
  font-weight: 400;
  margin-left: 16px;
  display: inline-block;
}

<span
  className="rovna-ui-typography c0 rovna-ui-typography-text css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-text"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, sequi?
</span>
`;

exports[`Text when "size" is medium with custom margin renders correctly 10`] = `
.c0.rovna-ui-typography-text {
  line-height: 20px;
  font-weight: 400;
  margin-left: 16px;
  display: inline-block;
}

<span
  className="rovna-ui-typography c0 rovna-ui-typography-text css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-text"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, sequi?
</span>
`;

exports[`Text when "size" is small and "color" has value renders correctly 1`] = `
.c0.rovna-ui-typography-text {
  line-height: 20px;
  font-weight: 400;
  color: red;
}

<span
  className="rovna-ui-typography c0 rovna-ui-typography-text css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-text"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, sequi?
</span>
`;

exports[`Text when "size" is small and "fontWeight" is 100 renders correctly 1`] = `
.c0.rovna-ui-typography-text {
  line-height: 20px;
  font-weight: 100;
}

<span
  className="rovna-ui-typography c0 rovna-ui-typography-text css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-text"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, sequi?
</span>
`;

exports[`Text when "size" is small and "fontWeight" is 200 renders correctly 1`] = `
.c0.rovna-ui-typography-text {
  line-height: 20px;
  font-weight: 200;
}

<span
  className="rovna-ui-typography c0 rovna-ui-typography-text css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-text"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, sequi?
</span>
`;

exports[`Text when "size" is small and "fontWeight" is 300 renders correctly 1`] = `
.c0.rovna-ui-typography-text {
  line-height: 20px;
  font-weight: 300;
}

<span
  className="rovna-ui-typography c0 rovna-ui-typography-text css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-text"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, sequi?
</span>
`;

exports[`Text when "size" is small and "fontWeight" is 400 renders correctly 1`] = `
.c0.rovna-ui-typography-text {
  line-height: 20px;
  font-weight: 400;
}

<span
  className="rovna-ui-typography c0 rovna-ui-typography-text css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-text"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, sequi?
</span>
`;

exports[`Text when "size" is small and "fontWeight" is 500 renders correctly 1`] = `
.c0.rovna-ui-typography-text {
  line-height: 20px;
  font-weight: 500;
}

<span
  className="rovna-ui-typography c0 rovna-ui-typography-text css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-text"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, sequi?
</span>
`;

exports[`Text when "size" is small and "fontWeight" is 600 renders correctly 1`] = `
.c0.rovna-ui-typography-text {
  line-height: 20px;
  font-weight: 600;
}

<span
  className="rovna-ui-typography c0 rovna-ui-typography-text css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-text"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, sequi?
</span>
`;

exports[`Text when "size" is small and "textAlign" is left renders correctly 1`] = `
.c0.rovna-ui-typography-text {
  line-height: 20px;
  font-weight: 400;
  display: inline-block;
  text-align: left;
}

<span
  className="rovna-ui-typography c0 rovna-ui-typography-text css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-text"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, sequi?
</span>
`;

exports[`Text when "size" is small and "textAlign" is right renders correctly 1`] = `
.c0.rovna-ui-typography-text {
  line-height: 20px;
  font-weight: 400;
  display: inline-block;
  text-align: right;
}

<span
  className="rovna-ui-typography c0 rovna-ui-typography-text css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-text"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, sequi?
</span>
`;

exports[`Text when "size" is small renders correctly 1`] = `
.c0.rovna-ui-typography-text {
  font-size: 12px;
  line-height: 16px;
  font-weight: 400;
}

<span
  className="rovna-ui-typography c0 rovna-ui-typography-text css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-text"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, sequi?
</span>
`;

exports[`Text when "size" is small uppercase renders correctly 1`] = `
.c0.rovna-ui-typography-text {
  line-height: 20px;
  font-weight: 400;
  text-transform: uppercase;
  -webkit-letter-spacing: 1px;
  -moz-letter-spacing: 1px;
  -ms-letter-spacing: 1px;
  letter-spacing: 1px;
}

<span
  className="rovna-ui-typography c0 rovna-ui-typography-text css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-text"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, sequi?
</span>
`;

exports[`Text when "size" is small with custom margin renders correctly 1`] = `
.c0.rovna-ui-typography-text {
  font-size: 12px;
  line-height: 16px;
  font-weight: 400;
  margin: 12px;
  display: inline-block;
}

<span
  className="rovna-ui-typography c0 rovna-ui-typography-text css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-text"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, sequi?
</span>
`;

exports[`Text when "size" is small with custom margin renders correctly 2`] = `
.c0.rovna-ui-typography-text {
  font-size: 12px;
  line-height: 16px;
  font-weight: 400;
  margin: 12px;
  display: inline-block;
}

<span
  className="rovna-ui-typography c0 rovna-ui-typography-text css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-text"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, sequi?
</span>
`;

exports[`Text when "size" is small with custom margin renders correctly 3`] = `
.c0.rovna-ui-typography-text {
  font-size: 12px;
  line-height: 16px;
  font-weight: 400;
  margin-top: 16px;
  display: inline-block;
}

<span
  className="rovna-ui-typography c0 rovna-ui-typography-text css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-text"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, sequi?
</span>
`;

exports[`Text when "size" is small with custom margin renders correctly 4`] = `
.c0.rovna-ui-typography-text {
  font-size: 12px;
  line-height: 16px;
  font-weight: 400;
  margin-top: 16px;
  display: inline-block;
}

<span
  className="rovna-ui-typography c0 rovna-ui-typography-text css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-text"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, sequi?
</span>
`;

exports[`Text when "size" is small with custom margin renders correctly 5`] = `
.c0.rovna-ui-typography-text {
  font-size: 12px;
  line-height: 16px;
  font-weight: 400;
  margin-right: 16px;
  display: inline-block;
}

<span
  className="rovna-ui-typography c0 rovna-ui-typography-text css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-text"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, sequi?
</span>
`;

exports[`Text when "size" is small with custom margin renders correctly 6`] = `
.c0.rovna-ui-typography-text {
  font-size: 12px;
  line-height: 16px;
  font-weight: 400;
  margin-right: 16px;
  display: inline-block;
}

<span
  className="rovna-ui-typography c0 rovna-ui-typography-text css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-text"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, sequi?
</span>
`;

exports[`Text when "size" is small with custom margin renders correctly 7`] = `
.c0.rovna-ui-typography-text {
  font-size: 12px;
  line-height: 16px;
  font-weight: 400;
  margin-bottom: 16px;
  display: inline-block;
}

<span
  className="rovna-ui-typography c0 rovna-ui-typography-text css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-text"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, sequi?
</span>
`;

exports[`Text when "size" is small with custom margin renders correctly 8`] = `
.c0.rovna-ui-typography-text {
  font-size: 12px;
  line-height: 16px;
  font-weight: 400;
  margin-bottom: 16px;
  display: inline-block;
}

<span
  className="rovna-ui-typography c0 rovna-ui-typography-text css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-text"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, sequi?
</span>
`;

exports[`Text when "size" is small with custom margin renders correctly 9`] = `
.c0.rovna-ui-typography-text {
  font-size: 12px;
  line-height: 16px;
  font-weight: 400;
  margin-left: 16px;
  display: inline-block;
}

<span
  className="rovna-ui-typography c0 rovna-ui-typography-text css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-text"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, sequi?
</span>
`;

exports[`Text when "size" is small with custom margin renders correctly 10`] = `
.c0.rovna-ui-typography-text {
  font-size: 12px;
  line-height: 16px;
  font-weight: 400;
  margin-left: 16px;
  display: inline-block;
}

<span
  className="rovna-ui-typography c0 rovna-ui-typography-text css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-text"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, sequi?
</span>
`;

exports[`Text when "size" is xs and "color" has value renders correctly 1`] = `
.c0.rovna-ui-typography-text {
  line-height: 20px;
  font-weight: 400;
  color: red;
}

<span
  className="rovna-ui-typography c0 rovna-ui-typography-text css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-text"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, sequi?
</span>
`;

exports[`Text when "size" is xs and "fontWeight" is 100 renders correctly 1`] = `
.c0.rovna-ui-typography-text {
  line-height: 20px;
  font-weight: 100;
}

<span
  className="rovna-ui-typography c0 rovna-ui-typography-text css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-text"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, sequi?
</span>
`;

exports[`Text when "size" is xs and "fontWeight" is 200 renders correctly 1`] = `
.c0.rovna-ui-typography-text {
  line-height: 20px;
  font-weight: 200;
}

<span
  className="rovna-ui-typography c0 rovna-ui-typography-text css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-text"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, sequi?
</span>
`;

exports[`Text when "size" is xs and "fontWeight" is 300 renders correctly 1`] = `
.c0.rovna-ui-typography-text {
  line-height: 20px;
  font-weight: 300;
}

<span
  className="rovna-ui-typography c0 rovna-ui-typography-text css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-text"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, sequi?
</span>
`;

exports[`Text when "size" is xs and "fontWeight" is 400 renders correctly 1`] = `
.c0.rovna-ui-typography-text {
  line-height: 20px;
  font-weight: 400;
}

<span
  className="rovna-ui-typography c0 rovna-ui-typography-text css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-text"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, sequi?
</span>
`;

exports[`Text when "size" is xs and "fontWeight" is 500 renders correctly 1`] = `
.c0.rovna-ui-typography-text {
  line-height: 20px;
  font-weight: 500;
}

<span
  className="rovna-ui-typography c0 rovna-ui-typography-text css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-text"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, sequi?
</span>
`;

exports[`Text when "size" is xs and "fontWeight" is 600 renders correctly 1`] = `
.c0.rovna-ui-typography-text {
  line-height: 20px;
  font-weight: 600;
}

<span
  className="rovna-ui-typography c0 rovna-ui-typography-text css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-text"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, sequi?
</span>
`;

exports[`Text when "size" is xs and "textAlign" is left renders correctly 1`] = `
.c0.rovna-ui-typography-text {
  line-height: 20px;
  font-weight: 400;
  display: inline-block;
  text-align: left;
}

<span
  className="rovna-ui-typography c0 rovna-ui-typography-text css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-text"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, sequi?
</span>
`;

exports[`Text when "size" is xs and "textAlign" is right renders correctly 1`] = `
.c0.rovna-ui-typography-text {
  line-height: 20px;
  font-weight: 400;
  display: inline-block;
  text-align: right;
}

<span
  className="rovna-ui-typography c0 rovna-ui-typography-text css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-text"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, sequi?
</span>
`;

exports[`Text when "size" is xs renders correctly 1`] = `
.c0.rovna-ui-typography-text {
  font-size: 10px;
  line-height: 16px;
  font-weight: 400;
}

<span
  className="rovna-ui-typography c0 rovna-ui-typography-text css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-text"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, sequi?
</span>
`;

exports[`Text when "size" is xs uppercase renders correctly 1`] = `
.c0.rovna-ui-typography-text {
  line-height: 20px;
  font-weight: 400;
  text-transform: uppercase;
  -webkit-letter-spacing: 1px;
  -moz-letter-spacing: 1px;
  -ms-letter-spacing: 1px;
  letter-spacing: 1px;
}

<span
  className="rovna-ui-typography c0 rovna-ui-typography-text css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-text"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, sequi?
</span>
`;

exports[`Text when "size" is xs with custom margin renders correctly 1`] = `
.c0.rovna-ui-typography-text {
  font-size: 10px;
  line-height: 16px;
  font-weight: 400;
  margin: 12px;
  display: inline-block;
}

<span
  className="rovna-ui-typography c0 rovna-ui-typography-text css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-text"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, sequi?
</span>
`;

exports[`Text when "size" is xs with custom margin renders correctly 2`] = `
.c0.rovna-ui-typography-text {
  font-size: 10px;
  line-height: 16px;
  font-weight: 400;
  margin: 12px;
  display: inline-block;
}

<span
  className="rovna-ui-typography c0 rovna-ui-typography-text css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-text"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, sequi?
</span>
`;

exports[`Text when "size" is xs with custom margin renders correctly 3`] = `
.c0.rovna-ui-typography-text {
  font-size: 10px;
  line-height: 16px;
  font-weight: 400;
  margin-top: 16px;
  display: inline-block;
}

<span
  className="rovna-ui-typography c0 rovna-ui-typography-text css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-text"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, sequi?
</span>
`;

exports[`Text when "size" is xs with custom margin renders correctly 4`] = `
.c0.rovna-ui-typography-text {
  font-size: 10px;
  line-height: 16px;
  font-weight: 400;
  margin-top: 16px;
  display: inline-block;
}

<span
  className="rovna-ui-typography c0 rovna-ui-typography-text css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-text"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, sequi?
</span>
`;

exports[`Text when "size" is xs with custom margin renders correctly 5`] = `
.c0.rovna-ui-typography-text {
  font-size: 10px;
  line-height: 16px;
  font-weight: 400;
  margin-right: 16px;
  display: inline-block;
}

<span
  className="rovna-ui-typography c0 rovna-ui-typography-text css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-text"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, sequi?
</span>
`;

exports[`Text when "size" is xs with custom margin renders correctly 6`] = `
.c0.rovna-ui-typography-text {
  font-size: 10px;
  line-height: 16px;
  font-weight: 400;
  margin-right: 16px;
  display: inline-block;
}

<span
  className="rovna-ui-typography c0 rovna-ui-typography-text css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-text"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, sequi?
</span>
`;

exports[`Text when "size" is xs with custom margin renders correctly 7`] = `
.c0.rovna-ui-typography-text {
  font-size: 10px;
  line-height: 16px;
  font-weight: 400;
  margin-bottom: 16px;
  display: inline-block;
}

<span
  className="rovna-ui-typography c0 rovna-ui-typography-text css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-text"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, sequi?
</span>
`;

exports[`Text when "size" is xs with custom margin renders correctly 8`] = `
.c0.rovna-ui-typography-text {
  font-size: 10px;
  line-height: 16px;
  font-weight: 400;
  margin-bottom: 16px;
  display: inline-block;
}

<span
  className="rovna-ui-typography c0 rovna-ui-typography-text css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-text"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, sequi?
</span>
`;

exports[`Text when "size" is xs with custom margin renders correctly 9`] = `
.c0.rovna-ui-typography-text {
  font-size: 10px;
  line-height: 16px;
  font-weight: 400;
  margin-left: 16px;
  display: inline-block;
}

<span
  className="rovna-ui-typography c0 rovna-ui-typography-text css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-text"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, sequi?
</span>
`;

exports[`Text when "size" is xs with custom margin renders correctly 10`] = `
.c0.rovna-ui-typography-text {
  font-size: 10px;
  line-height: 16px;
  font-weight: 400;
  margin-left: 16px;
  display: inline-block;
}

<span
  className="rovna-ui-typography c0 rovna-ui-typography-text css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-text"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, sequi?
</span>
`;
